--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ var qubely_container_width = {"sm":"540","md":"720","lg":"960","xl":"1140"};
 				</div>
 				<div class="elementor-element elementor-element-fe91c00 elementor-widget elementor-widget-heading" data-id="fe91c00" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">(Currently making new strategies for when the Rona ends)</h2>		</div>
+			</div>
 				</div>
 				<div class="elementor-element elementor-element-1738e32a elementor-vertical-align-middle elementor-position-top elementor-widget elementor-widget-image-box" data-id="1738e32a" data-element_type="widget" data-widget_type="image-box.default">
 				<div class="elementor-widget-container">
