--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ var qubely_container_width = {"sm":"540","md":"720","lg":"960","xl":"1140"};
 				</div>
 				<div class="elementor-element elementor-element-a6e940c elementor-widget elementor-widget-heading" data-id="a6e940c" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Marketing Strategies for Websites & Social Media</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Marketing Strategies for Your Online Store</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-fe91c00 elementor-widget elementor-widget-heading" data-id="fe91c00" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
